# mavis-lib

./: Cargo.toml  README.md
src/: action.rs  lib.rs  main.rs  utils.rs
src/input/: keyboard.rs  mouse.rs
src/vision/: mod.rs  ocv.rs  tsrt.rs
